--- a/index.html
+++ b/index.html
@@ -2,10 +2,84 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Convoy Manifest Tool</title>
+    <title>USMC Convoy Manifest Tool</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 20px; background-color: #f4f4f4; }
+        h1 { color: #013220; } /* Dark green for USMC vibe */
+        .section { background: white; padding: 20px; border-radius: 5px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); margin-bottom: 20px; }
+        label { display: block; margin: 10px 0 5px; font-weight: bold; }
+        input, select { width: 100%; padding: 8px; margin-bottom: 10px; border: 1px solid #ccc; border-radius: 4px; }
+        button { background-color: #013220; color: white; padding: 10px 20px; border: none; border-radius: 4px; cursor: pointer; }
+        button:hover { background-color: #024930; }
+        #suggestion-output { margin-top: 20px; }
+    </style>
 </head>
 <body>
-    <h1>Welcome to the Convoy Manifest Tool</h1>
-    <p>This is a test page for hosting.</p>
+    <h1>USMC Convoy Manifest Tool</h1>
+    <div class="section">
+        <h2>Convoy Planning</h2>
+        <form id="convoy-form">
+            <label for="cargo-type">What are you moving?</label>
+            <select id="cargo-type" name="cargo-type" required>
+                <option value="">Select cargo type</option>
+                <option value="ammo">Ammunition</option>
+                <option value="fuel">Fuel</option>
+                <option value="supplies">General Supplies</option>
+                <option value="personnel">Personnel</option>
+            </select>
+
+            <label for="weight">Total Weight (lbs):</label>
+            <input type="number" id="weight" name="weight" min="0" step="1" required>
+
+            <label for="volume">Volume (cu ft):</label>
+            <input type="number" id="volume" name="volume" min="0" step="1" required>
+
+            <button type="submit">Suggest Vehicles</button>
+        </form>
+        <div id="suggestion-output"></div>
+    </div>
+
+    <script>
+        const form = document.getElementById('convoy-form');
+        const output = document.getElementById('suggestion-output');
+
+        // Sample USMC vehicle data (simplified)
+        const vehicles = {
+            HMMWV: { capacity: 2500, volume: 100, suitableFor: ['ammo', 'supplies', 'personnel'] },
+            MTVR: { capacity: 15000, volume: 500, suitableFor: ['ammo', 'supplies', 'fuel'] },
+            LVS: { capacity: 25000, volume: 800, suitableFor: ['fuel', 'supplies'] }
+        };
+
+        form.addEventListener('submit', function(event) {
+            event.preventDefault();
+            const cargoType = document.getElementById('cargo-type').value;
+            const weight = parseInt(document.getElementById('weight').value);
+            const volume = parseInt(document.getElementById('volume').value);
+
+            // Simple suggestion logic
+            let suggestion = [];
+            if (weight <= 2500 && volume <= 100 && vehicles.HMMWV.suitableFor.includes(cargoType)) {
+                suggestion.push('1x HMMWV');
+            } else if (weight <= 15000 && volume <= 500 && vehicles.MTVR.suitableFor.includes(cargoType)) {
+                suggestion.push('1x MTVR');
+            } else if (weight <= 25000 && volume <= 800 && vehicles.LVS.suitableFor.includes(cargoType)) {
+                suggestion.push('1x LVS');
+            } else {
+                suggestion.push('Multiple vehicles required or adjust load.');
+            }
+
+            // Display suggestion
+            output.innerHTML = `
+                <h3>Suggested Vehicles</h3>
+                <p>${suggestion.join(', ')}</p>
+                <button onclick="approvePlan('${suggestion.join(', ')}')">Approve Plan</button>
+            `;
+        });
+
+        function approvePlan(suggestion) {
+            output.innerHTML += `<p>Plan approved! Manifest and load plan generation coming soon.</p>`;
+            // Next portion will expand this
+        }
+    </script>
 </body>
 </html>
