--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <title>USMC Convoy Manifest Tool</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; background-color: #f4f4f4; text-align: center; }
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; text-align: center; height: 100vh; overflow: hidden; }
         h1 { color: #013220; } /* Dark green for USMC */
-        .screen { display: none; padding: 20px; }
+        .screen { display: none; padding: 20px; position: absolute; top: 0; left: 0; width: 100%; height: 100%; box-sizing: border-box; }
         .active { display: block; }
         button { background-color: #013220; color: white; padding: 10px 20px; border: none; border-radius: 4px; cursor: pointer; margin: 5px; }
         button:hover { background-color: #024930; }
         button:disabled { background-color: #666; cursor: not-allowed; }
         input, select { width: 80%; padding: 8px; margin: 10px 0; border: 1px solid #ccc; border-radius: 4px; }
         label { display: block; margin: 5px 0; font-weight: bold; }
-        #splash { background-color: #white; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; }
-        #splash img { max-width: 300px; }
+        #splash { background-color: white; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; }
+        #splash img { max-width: 300px; width: 80%; }
+        #initial-screen, #new-user-screen, #options-screen { background: white; margin: 0 auto; max-width: 600px; height: 100%; overflow-y: auto; }
     </style>
 </head>
 <body>
@@ -66,7 +67,9 @@
         }
 
         // Splash screen timer
-        setTimeout(() => showScreen('initial-screen'), 5000);
+        setTimeout(() => {
+            showScreen('initial-screen');
+        }, 5000);
 
         // Check for existing data
         const userData = JSON.parse(localStorage.getItem('userData')) || {};
