--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
         #splash { background-color: white; height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; }
         #splash img { max-width: 300px; width: 80%; }
         #app { display: none; height: 100vh; overflow-y: auto; }
-        h1 { color: #013220; } /* Dark green for USMC */
-        .screen { padding: 20px; max-width: 600px; margin: 0 auto; background: white; min-height: 100%; }
+        h1 { color: #013220; }
+        .screen { padding: 20px; max-width: 800px; margin: 0 auto; background: white; min-height: 100%; }
         button { background-color: #013220; color: white; padding: 10px 20px; border: none; border-radius: 4px; cursor: pointer; margin: 5px; }
         button:hover { background-color: #024930; }
         button:disabled { background-color: #666; cursor: not-allowed; }
-        input, select { width: 80%; padding: 8px; margin: 10px 0; border: 1px solid #ccc; border-radius: 4px; }
+        input, select { width: 100%; padding: 8px; margin: 5px 0; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box; }
         label { display: block; margin: 5px 0; font-weight: bold; }
+        table { width: 100%; border-collapse: collapse; margin: 20px 0; }
+        th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
+        th { background-color: #013220; color: white; }
+        .add-row-btn { background-color: #013220; font-size: 16px; padding: 5px 10px; }
     </style>
 </head>
 <body>
@@ -77,9 +81,99 @@
             <button id="add-weapons-btn">Add Weapons Systems</button>
             <button id="back-to-vehicles-btn">Back</button>
         </div>
+
+        <!-- Add Comm Gear Screen -->
+        <div id="add-comm-gear-screen" class="screen" style="display: none;">
+            <h1>Add Comm Gear</h1>
+            <table id="comm-gear-table">
+                <thead>
+                    <tr>
+                        <th>TAMCN</th>
+                        <th>Name</th>
+                        <th>Serial Number</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody id="comm-gear-rows"></tbody>
+            </table>
+            <button id="save-comm-gear-btn">Save</button>
+            <button id="back-to-manual-add-btn">Back</button>
+        </div>
     </div>
 
     <script>
+        // Comm gear data from your spreadsheet
+        const commGearData = {
+            "A00227G": "JOINT BATTLE COMMAND-PLATFORM (JBC-P) INTERMEDIATE VEHICLE MOUNTED SYSTEM (VMS)",
+            "A00617G": "TACT ELEVATED ANTENNA MAST SYS (TEAMS)",
+            "A00677G": "HIGH FREQUENCY VEHICLE SYSTEM",
+            "A00732B": "CHARGER, ADVANCED BATTERY",
+            "A00977G": "RADIO SET, DUAL VEHICLE ADAPTER, 50-WATT (DVA)",
+            "A01187G": "RADIO SET, INTEGRATED INTRA-SQUAD",
+            "A01197G": "MARINE ANALOG TACTICAL TELEPHONE",
+            "A01267G": "MULTI-BAND FREQUENCY, VEHICLE MOUNTED RADIO SYSTEM",
+            "A01397G": "RADIO SET",
+            "A01737G": "COMM SECURITY MODULE (CSM)",
+            "A01747G": "LAN SERVICE MODULE (LSM)",
+            "A01757G": "COMPUTER DIGITAL DATA TRANSFER",
+            "A01767G": "LAN EXTENSION MODULE",
+            "A01777G": "APPLICATION SERVER MODULE(ASM)",
+            "A01987G": "RADIO SET, HIGH FREQUENCY, MANPACK SYSTEM",
+            "A02057G": "RADIO SET, MULTICHANNEL MANPACK (MCMP) SYSTEM",
+            "A02067G": "MULTICHANNEL MANPACK MULTICHANNEL MANPACK (MCMP) VEHICULAR SYSTEM SINGLE RT DUAL AMP",
+            "A02077G": "RADIO SET, MULTICHANNEL HANDHELD (MCHH) SYSTEM",
+            "A02087G": "RADIO SET, MULTICHANNEL HANDHELD (MCHH) VEHICLE SYSTEM",
+            "A02107G": "ANTENNA GROUP",
+            "A02117G": "ANTENNA GROUP",
+            "A02347G": "VERY SMALL APERTURE TERMINAL - SMALL (VSAT-S)",
+            "A02727G": "RADIO REMOTE CONTROL UNIT",
+            "A02757G": "SURVEILLANCE, PERSISTENT OBSERVATION, AND TARGET RECOGNITION (SPOTR)",
+            "A02987G": "HANDHELD SCANNER",
+            "A03007G": "PM-4I PRINTER LABEL (TDIS)",
+            "A03007GB": "PRINTER BARCODE LABEL DESKTOP (TDIS)",
+            "A03127G": "WAN SERVICES MODULE (WSM) V2",
+            "A03317G": "RADIO SET, LOW PROFILE SINGLE VEHICLE ADAPTER, 50-WATT",
+            "A03367G": "SCA MULTIBAND NETWORKING RADIO",
+            "A03517G": "RF-7800R-RC-110",
+            "A03527G": "SCA MULTIBAND NETWORKING VEHICULAR RADIO SYSTEM - SINGLE MOUNT (RF-300M-V150)",
+            "A03567G": "PLOTTER ALL-IN-ONE, EXPEDITIONARY",
+            "A04147G": "SMALL UNIT REMOTE SCOUTING SYSTEM (SURSS), PUMA SUAS",
+            "A08747G": "IAS TIER III INTELLIGENCE WORKSTATION (IW)",
+            "A12607G": "NAVIGATION SET, SATELLITE SIGNALS",
+            "A12607GK": "NAVIGATION SET, SATELLITE SIGNALS",
+            "A12607GL": "NAVIGATION SET, SATELLITE SIGNALS",
+            "A20427G": "RADIO SET, HIGH FREQUENCY, MANPACK",
+            "A20687G": "RADIO SET, MULTIBAND, FALCON II",
+            "A70007G": "MICROWAVE ANALYZER",
+            "A70027G": "ANALYZER, SPECTRUM HAND HELD",
+            "A70027GE": "HAND HELD 20GHZ SPECTRUM ANALYZER",
+            "A70517G": "METER, POWER",
+            "A70807G": "HAND HELD 1GHZ RADIO TEST SET",
+            "A70867G": "OPTICAL TIME DOMAIN REFLECTOMETER (OTDR)",
+            "A75022H": "WIRELESS AT-PLATFORM TEST SET (WATS)",
+            "A75047G": "EMSS ELECTRONIC MAINTENANCE DEVICE",
+            "A75057H": "HAND HELD RADIO TEST SET",
+            "A77067G": "POWER SUPPLY",
+            "A80017GA": "KGV 72",
+            "A80047GA": "KSV 21",
+            "A80067GC": "KG-250XS",
+            "A80107G": "TERMINAL EQUIPMENT, TELEPHONE, SECURE",
+            "A80237G": "TRANSFER DEVICE, DATA",
+            "A80847GB": "ENCRYPTION-DECRYPTION KIV-7M",
+            "A80887G": "ENCRYPTOR, NETWORK, IN-LINE",
+            "A80887GB": "ENCRYPTOR, NETWORK, IN-LINE",
+            "A90122G": "FIELD SERVICE STATION",
+            "A90157G": "THEATRE MEDICAL INFORMATION PROGRAM CLIENT",
+            "A90207G": "MCHS TABLET RUGGED",
+            "A90237GD": "LAPTOP, HIGH PERF DELL PREC 3571",
+            "A90257GB": "MCHS DEPLOY SERVER",
+            "A90897G": "TACTICAL OPERATIONS CENTER KIT",
+            "A91007G": "COMPUTER, GP, LAPTOP",
+            "A91007GL": "MCHS GP LAPTOP",
+            "A91007GM": "MCHS 5TH GEN GP LAPTOP",
+            "A91357G": "INTEGRATED COMPUTERIZED DEPLOYMENT SYSTEM (ICODES)"
+        };
+
         // Screen management
         function showScreen(screenId) {
             document.querySelectorAll('#app .screen').forEach(screen => screen.style.display = 'none');
@@ -94,7 +188,8 @@
 
         // Check for existing data
         const userData = JSON.parse(localStorage.getItem('userData')) || {};
-        if (Object.keys(userData).length > 0) {
+        const commGear = JSON.parse(localStorage.getItem('commGear')) || [];
+        if (Object.keys(userData).length > 0 || commGear.length > 0) {
             document.getElementById('returning-user-btn').disabled = false;
         }
 
@@ -126,12 +221,64 @@
         document.getElementById('upload-spreadsheet-btn').addEventListener('click', () => alert('Spreadsheet upload coming soon!'));
         document.getElementById('back-to-options-btn').addEventListener('click', () => showScreen('options-screen'));
 
-        // Manual add screen buttons (placeholders)
-        document.getElementById('add-comm-gear-btn').addEventListener('click', () => alert('Add Comm Gear form coming soon!'));
+        // Manual add screen buttons
+        document.getElementById('add-comm-gear-btn').addEventListener('click', () => {
+            showScreen('add-comm-gear-screen');
+            loadCommGearRows();
+        });
         document.getElementById('add-engineering-btn').addEventListener('click', () => alert('Add Engineering Equipment form coming soon!'));
         document.getElementById('add-vehicles-btn').addEventListener('click', () => alert('Add Vehicles form coming soon!'));
         document.getElementById('add-weapons-btn').addEventListener('click', () => alert('Add Weapons Systems form coming soon!'));
         document.getElementById('back-to-vehicles-btn').addEventListener('click', () => showScreen('vehicles-screen'));
+
+        // Comm gear screen logic
+        function createCommGearRow(tamcn = '', name = '', serial = '') {
+            const row = document.createElement('tr');
+            row.innerHTML = `
+                <td><select class="tamcn-select">${Object.keys(commGearData).map(t => `<option value="${t}" ${t === tamcn ? 'selected' : ''}>${t}</option>`).join('')}</select></td>
+                <td><select class="name-select">${Object.values(commGearData).map(n => `<option value="${n}" ${n === name ? 'selected' : ''}>${n}</option>`).join('')}</select></td>
+                <td><input type="text" class="serial-input" value="${serial}" placeholder="Enter Serial Number" required></td>
+                <td><button class="add-row-btn">+</button></td>
+            `;
+            const tamcnSelect = row.querySelector('.tamcn-select');
+            const nameSelect = row.querySelector('.name-select');
+            tamcnSelect.addEventListener('change', () => {
+                nameSelect.value = commGearData[tamcnSelect.value];
+            });
+            row.querySelector('.add-row-btn').addEventListener('click', () => {
+                document.getElementById('comm-gear-rows').appendChild(createCommGearRow());
+            });
+            return row;
+        }
+
+        function loadCommGearRows() {
+            const tbody = document.getElementById('comm-gear-rows');
+            tbody.innerHTML = '';
+            const savedGear = JSON.parse(localStorage.getItem('commGear')) || [];
+            if (savedGear.length > 0) {
+                savedGear.forEach(gear => tbody.appendChild(createCommGearRow(gear.tamcn, gear.name, gear.serial)));
+            } else {
+                tbody.appendChild(createCommGearRow());
+            }
+        }
+
+        document.getElementById('save-comm-gear-btn').addEventListener('click', () => {
+            const rows = document.querySelectorAll('#comm-gear-rows tr');
+            const gearList = [];
+            rows.forEach(row => {
+                const tamcn = row.querySelector('.tamcn-select').value;
+                const name = row.querySelector('.name-select').value;
+                const serial = row.querySelector('.serial-input').value;
+                if (tamcn && name && serial) {
+                    gearList.push({ tamcn, name, serial });
+                }
+            });
+            localStorage.setItem('commGear', JSON.stringify(gearList));
+            alert('Comm Gear saved!');
+            showScreen('manual-add-screen');
+        });
+
+        document.getElementById('back-to-manual-add-btn').addEventListener('click', () => showScreen('manual-add-screen'));
     </script>
 </body>
 </html>
